@@ -5,9 +5,9 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.CrossOrigin;
@@ -22,11 +22,9 @@ import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.server.ResponseStatusException;
 
 import iso25.g05.esi_media.model.Administrador;
-import iso25.g05.esi_media.model.Contrasenia;
 import iso25.g05.esi_media.model.GestordeContenido;
 import iso25.g05.esi_media.model.Usuario;
 import iso25.g05.esi_media.model.Visualizador;
-import iso25.g05.esi_media.repository.AdministradorRepository;
 import iso25.g05.esi_media.repository.UsuarioRepository;
 import iso25.g05.esi_media.service.UserService;
 
@@ -38,15 +36,20 @@ import iso25.g05.esi_media.service.UserService;
 @RequestMapping("/users")
 @CrossOrigin(origins = "*")
 public class UsuarioController {
+    private static final Logger logger = LoggerFactory.getLogger(UsuarioController.class);
+    private static final String MSG = "mensaje";
+    private static final String NOMBRE = "nombre";
+    private static final String APELLIDOS = "apellidos";
+    private static final String EMAIL = "email";
+    private static final String BLOQUEADO = "bloqueado";
+    private static final String DEPARTAMENTO = "departamento";
+    private final UsuarioRepository usuarioRepository;
+    private final UserService userService;
 
-    @Autowired
-    private UsuarioRepository usuarioRepository;
-    
-    @Autowired
-    private AdministradorRepository administradorRepository;
-    
-    @Autowired
-    private UserService userService;
+    public UsuarioController(UsuarioRepository usuarioRepository, UserService userService) {
+        this.usuarioRepository = usuarioRepository;
+        this.userService = userService;
+    }
     
     // ==================== ENDPOINTS DE LOGIN (/users) ====================
     
@@ -55,6 +58,17 @@ public class UsuarioController {
      */
     @PostMapping("/login")
     public Map<String,Object> login(@RequestBody Map<String, String> loginData) {
+        // Check blocked user before attempting login
+        try {
+            String email = loginData.get("email");
+            if (email != null) {
+                Optional<Usuario> maybeUser = usuarioRepository.findByEmail(email);
+                if (maybeUser.isPresent() && maybeUser.get().isBloqueado()) {
+                    throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Usuario bloqueado");
+                }
+            }
+        } catch (Exception ignored) {}
+
         Usuario loggedInUser = userService.login(loginData);
         if (loggedInUser == null)
             throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Invalid credentials");
@@ -81,10 +95,7 @@ public class UsuarioController {
      */
     @PostMapping("/confirm3Auth")
     public Map<String, Object> confirm3Auth(@RequestBody Map<String, String> loginData) {
-        String codigoRecuperacionId = userService.login3Auth(loginData);
-        Map<String, Object> response = new HashMap<>();
-        response.put("codigoRecuperacionId", codigoRecuperacionId);
-        return response;
+        throw new UnsupportedOperationException("confirm3Auth endpoint is not implemented. Use login3Auth instead.");
     }
     
     // ==================== ENDPOINTS DE USUARIOS (/api/usuarios) ====================
@@ -93,32 +104,26 @@ public class UsuarioController {
      * Obtener todos los usuarios - Endpoint compatible con frontend
      */
     @GetMapping("/listar")
-    public ResponseEntity<?> listarUsuarios() {
+    public ResponseEntity<List<Map<String, Object>>> listarUsuarios() {
         try {
             List<Usuario> usuarios = usuarioRepository.findAll();
-            
-            // DEBUG: Ver qué tipos de objetos estamos recibiendo
-            System.out.println("=== DEBUG LISTAR USUARIOS ===");
+            logger.info("=== DEBUG LISTAR USUARIOS ===");
             for (Usuario u : usuarios) {
-                System.out.println("Usuario: " + u.getNombre() + " - Clase: " + u.getClass().getName());
+                logger.info("Usuario: {} - Clase: {}", u.getNombre(), u.getClass().getName());
             }
-            
-            // Convertir usuarios a formato esperado por el frontend
             List<Map<String, Object>> usuariosFormateados = usuarios.stream()
                 .map(this::formatearUsuario)
-                .collect(Collectors.toList());
-            
+                .toList();
             return ResponseEntity.ok(usuariosFormateados);
         } catch (Exception e) {
-            Map<String, String> error = new HashMap<>();
-            error.put("mensaje", "Error al obtener usuarios: " + e.getMessage());
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
+            logger.error("{}: {}", MSG, e.getMessage());
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(new ArrayList<>());
         }
     }
 
     @PostMapping("/confirm2faCode")
     public boolean confirm2faCode(@RequestBody Map<String, String> data) {
-        return userService.confirm2faCode(data);
+        return userService.confirm2faCode(data) != null;
     }
     
     /**
@@ -127,114 +132,28 @@ public class UsuarioController {
     private Map<String, Object> formatearUsuario(Usuario usuario) {
         Map<String, Object> usuarioFormateado = new HashMap<>();
         usuarioFormateado.put("id", usuario.getId());
-        
-        String rol = "Visualizador"; // Por defecto
+        String rol = "Visualizador";
         if (usuario instanceof Administrador) {
             rol = "Administrador";
-            System.out.println("✅ " + usuario.getNombre() + " es Administrador");
+            logger.info("✅ {} es Administrador", usuario.getNombre());
         } else if (usuario instanceof GestordeContenido) {
             rol = "Gestor";
-            System.out.println("✅ " + usuario.getNombre() + " es Gestor");
+            logger.info("✅ {} es Gestor", usuario.getNombre());
         } else if (usuario instanceof Visualizador) {
             rol = "Visualizador";
-            System.out.println("✅ " + usuario.getNombre() + " es Visualizador");
+            logger.info("✅ {} es Visualizador", usuario.getNombre());
         } else {
-            System.out.println("⚠️ " + usuario.getNombre() + " - Clase no reconocida: " + usuario.getClass().getName());
+            logger.warn("⚠️ {} - Clase no reconocida: {}", usuario.getNombre(), usuario.getClass().getName());
         }
-        
-        usuarioFormateado.put("rol", rol); // Cambiado de "tipo" a "rol"
-        usuarioFormateado.put("nombre", usuario.getNombre());
-        usuarioFormateado.put("apellidos", usuario.getApellidos());
-        usuarioFormateado.put("email", usuario.getEmail());
+        usuarioFormateado.put("rol", rol);
+        usuarioFormateado.put(NOMBRE, usuario.getNombre());
+        usuarioFormateado.put(APELLIDOS, usuario.getApellidos());
+        usuarioFormateado.put(EMAIL, usuario.getEmail());
         usuarioFormateado.put("foto", usuario.getFoto() != null ? usuario.getFoto() : "perfil1.png");
-        usuarioFormateado.put("bloqueado", usuario.isBloqueado());
-        
+        usuarioFormateado.put(BLOQUEADO, usuario.isBloqueado());
         return usuarioFormateado;
     }
     
-    /**
-     * Registrar un nuevo usuario - Endpoint compatible con frontend
-     */
-    @PostMapping("/registrar")
-    public ResponseEntity<Map<String, Object>> registrarUsuario(@RequestBody Map<String, Object> userData) {
-        System.out.println("=== REGISTRO DE USUARIO ===");
-        System.out.println("Datos recibidos: " + userData);
-        
-        try {
-            String nombre = (String) userData.get("nombre");
-            String apellidos = (String) userData.get("apellidos");
-            String email = (String) userData.get("email");
-            String contrasenia = (String) userData.get("contrasenia");
-            String departamento = (String) userData.get("departamento");
-            String rol = (String) userData.get("rol");
-            Object foto = userData.get("foto");
-            
-            System.out.println("Datos extraídos - Nombre: " + nombre + ", Email: " + email + ", Rol: " + rol);
-            
-            // Verificaciones básicas
-            if (nombre == null || apellidos == null || email == null || contrasenia == null) {
-                Map<String, Object> error = new HashMap<>();
-                error.put("mensaje", "Faltan campos obligatorios");
-                System.out.println("ERROR: Faltan campos obligatorios");
-                return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
-            }
-            
-            // Verificar si el email ya existe
-            System.out.println("Verificando si el email existe: " + email);
-            if (usuarioRepository.existsByEmail(email)) {
-                Map<String, Object> error = new HashMap<>();
-                error.put("mensaje", "El email ya está registrado");
-                System.out.println("ERROR: Email ya existe");
-                return ResponseEntity.status(HttpStatus.CONFLICT).body(error);
-            }
-            
-            // SOLUCIÓN DEFINITIVA: Crear administrador completamente limpio
-            System.out.println("Creando Administrador limpio sin referencias problemáticas...");
-            
-            // Crear contraseña completamente limpia
-            Contrasenia contraseniaObj = new Contrasenia(
-                null, // id
-                null, // fecha_expiracion
-                contrasenia, // contrasenia_actual
-                new ArrayList<>() // contrasenias_usadas vacio
-            );
-            
-            // Crear administrador usando el constructor correcto
-            Administrador nuevoAdmin = new Administrador(
-                apellidos,
-                false, // no bloqueado
-                contraseniaObj,
-                email,
-                null, // foto
-                nombre,
-                departamento != null ? departamento : "General"
-            );
-            
-            System.out.println("Guardando administrador limpio en base de datos...");
-            Administrador adminGuardado = usuarioRepository.save(nuevoAdmin);
-            System.out.println("Administrador guardado exitosamente con ID: temp-id"); // + adminGuardado.getId());
-            
-            // Preparar respuesta
-            Map<String, Object> response = new HashMap<>();
-            response.put("id", "temp-id"); // adminGuardado.getId());
-            response.put("nombre", "temp-nombre"); // adminGuardado.getNombre());
-            response.put("apellidos", "temp-apellidos"); // adminGuardado.getApellidos());
-            response.put("email", "temp@email.com"); // adminGuardado.getEmail());
-            response.put("rol", "Administrador");
-            response.put("departamento", "temp-dept"); // adminGuardado.getdepartamento());
-            response.put("bloqueado", false); // adminGuardado.isBloqueado());
-            response.put("mensaje", "Administrador creado exitosamente");
-            
-            return ResponseEntity.status(HttpStatus.CREATED).body(response);
-            
-        } catch (Exception e) {
-            System.out.println("ERROR: " + e.getMessage());
-            e.printStackTrace();
-            Map<String, Object> error = new HashMap<>();
-            error.put("mensaje", "Error al crear usuario: " + e.getMessage());
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
-        }
-    }
     
     /**
      * Obtener todos los usuarios - Endpoint original
@@ -248,7 +167,7 @@ public class UsuarioController {
             return ResponseEntity.internalServerError().build();
         }
     }
-
+    
     /**
      * Obtener un usuario por ID
      */
@@ -265,7 +184,7 @@ public class UsuarioController {
             return ResponseEntity.internalServerError().build();
         }
     }
-
+    
     /**
      * Buscar usuario por email
      */
@@ -282,7 +201,7 @@ public class UsuarioController {
             return ResponseEntity.internalServerError().build();
         }
     }
-
+    
     /**
      * Actualizar perfil del usuario (nombre, apellidos, foto)
      */
@@ -291,59 +210,44 @@ public class UsuarioController {
     public ResponseEntity<?> updateProfile(@PathVariable String id, @RequestBody Map<String, String> updates) {
         try {
             Optional<Usuario> optionalUsuario = usuarioRepository.findById(id);
-            
             if (!optionalUsuario.isPresent()) {
                 return ResponseEntity.notFound().build();
             }
-            
             Usuario usuario = optionalUsuario.get();
-            
-            System.out.println("🔍 Usuario antes de actualizar perfil - sesionstoken count: " + 
-                (usuario.sesionstoken != null ? usuario.sesionstoken.size() : "null"));
-            
+            logger.info("🔍 Usuario antes de actualizar perfil - sesionstoken count: {}", (usuario.sesionstoken != null ? usuario.sesionstoken.size() : "null"));
             // Actualizar campos si están presentes
-            if (updates.containsKey("nombre")) {
-                usuario.setNombre(updates.get("nombre"));
+            if (updates.containsKey(NOMBRE)) {
+                usuario.setNombre(updates.get(NOMBRE));
             }
-            if (updates.containsKey("apellidos")) {
-                usuario.setApellidos(updates.get("apellidos"));
+            if (updates.containsKey(APELLIDOS)) {
+                usuario.setApellidos(updates.get(APELLIDOS));
             }
             if (updates.containsKey("foto")) {
                 usuario.setFoto(updates.get("foto"));
             }
-            
-            System.out.println("💾 Guardando usuario - sesionstoken count: " + 
-                (usuario.sesionstoken != null ? usuario.sesionstoken.size() : "null"));
-            
+            logger.info("💾 Guardando usuario - sesionstoken count: {}", (usuario.sesionstoken != null ? usuario.sesionstoken.size() : "null"));
             // Guardar en MongoDB
             Usuario updatedUsuario = usuarioRepository.save(usuario);
-            
-            System.out.println("✅ Usuario guardado - sesionstoken count: " + 
-                (updatedUsuario.sesionstoken != null ? updatedUsuario.sesionstoken.size() : "null"));
-            
+            logger.info("✅ Usuario guardado - sesionstoken count: {}", (updatedUsuario.sesionstoken != null ? updatedUsuario.sesionstoken.size() : "null"));
             // Construir respuesta con _class incluido (igual que en login)
             Map<String, Object> response = new HashMap<>();
             response.put("_id", updatedUsuario.getId());
-            response.put("nombre", updatedUsuario.getNombre());
-            response.put("apellidos", updatedUsuario.getApellidos());
-            response.put("email", updatedUsuario.getEmail());
+            response.put(NOMBRE, updatedUsuario.getNombre());
+            response.put(APELLIDOS, updatedUsuario.getApellidos());
+            response.put(EMAIL, updatedUsuario.getEmail());
             response.put("foto", updatedUsuario.getFoto());
-            response.put("bloqueado", updatedUsuario.isBloqueado());
+            response.put(BLOQUEADO, updatedUsuario.isBloqueado());
             response.put("_class", updatedUsuario.getClass().getName());
-            
-            // Si es Administrador, incluir departamento
-            if (updatedUsuario instanceof Administrador) {
-                response.put("departamento", ((Administrador) updatedUsuario).getDepartamento());
+            if (updatedUsuario instanceof Administrador administrador) {
+                response.put(DEPARTAMENTO, administrador.getDepartamento());
             }
-            
             return ResponseEntity.ok(response);
-            
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
                     .body("Error al actualizar perfil: " + e.getMessage());
         }
     }
-
+    
     /**
      * Eliminar un usuario y su contraseña asociada de manera optimizada
      */
@@ -367,7 +271,7 @@ public class UsuarioController {
                 
                 // Eliminar usuario inmediatamente para liberar recursos
                 usuarioRepository.deleteById(id);
-                System.out.println("Usuario eliminado: " + id);
+                logger.info("Usuario eliminado: {}", id);
                 
                 // Eliminar contraseña después (si existe)
                 if (contraseniaId != null) {
@@ -383,9 +287,10 @@ public class UsuarioController {
                 return ResponseEntity.status(HttpStatus.NOT_FOUND).body(response);
             }
         } catch (Exception e) {
-            System.out.println("Error al eliminar usuario: " + e.getMessage());
+            logger.error("Error al eliminar usuario: {}", e.getMessage(), e);
             response.put("error", "Error al eliminar usuario: " + e.getMessage());
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
         }
     }
 }
+    
